# IDIOT

./: .gitignore  .gitmodules  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.claude/agents/: spec-workflow-reviewer.md
.claude/commands/: docs_are_software_workflow.md  spec_workflow_final_review.md  spec_workflow_review_updating.md  spec_workflow_start.md  spec_workflow_user_prompt.md
api/: Dockerfile  run.sh
api/agent/: __init__.py  base_agent.py
api/app/: constant.py  data_model.py  graceful_shutdown.py  logger.py  main.py  sql_orm.py  utils.py
api/authentication/: __init__.py  constant.py  data_model.py  simple_user_db.py  sql_orm.py  user_db_base.py  utils.py
api/chat/: U2A_msg_history_processor.py  __init__.py  base_processor.py  chat_task.py  exception.py  stream_listener.py  streaming_processor.py
api/graph_executor/: __init__.py  exceptions.py  graph.py  graph_core.py
api/human_in_loop/: context.py  execption.py  interrupt.py  notification.py
api/llm/: __init__.py  __tongyi_farui.py  data_model.py  deepseek.py  generator.py  qwen.py  tongyi.py  tongyi_farui.py
api/load_balance/: README.md  __init__.py  constant.py  exception.py  load_balance_strategy.py  load_balancer.py  service_instance.py  service_regeistry.py
api/logger/: __init__.py  constant.py  datamodel.py  exception_dump.py  logger.py  time.py
api/redis/: __init__.py  constants.py  distributed_lock.py  human_in_loop.py  pubsub.py
api/s3_FS/: __init__.py
api/sql_utils/: utils.py  (+1 more)
cortex/: cortex-config.yaml
docker/: clean_volumes.sh  docker-compose.yml  example.env  init_volumes.sh
examples/: human_in_loop_client.py
jaeger/: config.yaml  ui-config.json
nginx/: run.sh
otel_collector/: otel-collector-config-connector.yml
pip_resources/: download.sh
prometheus/: prometheus-config.yaml
testcase/: test_graph_excutor.py  test_simple_text.py
(+202 files in other folders)
