[project]
name = "dify-file-chunk-spiliter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "markitdown[all]>=0.1.2",
    "mrkdwn-analysis>=0.1.6",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.41",
    "wheel>=0.45.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
