[project]
name = "IDIOT-venv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.1",
    "debugpy>=1.8.14",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "json-repair>=0.47.1",
    "logfire>=3.21.1",
    "loguru>=0.7.3",
    "markitdown[all]>=0.1.2",
    "mrkdwn-analysis>=0.1.6",
    "openai>=1.88.0",
    "pip>=25.1.1",
    "psycopg2-binary>=2.9.10",
    "pydantic-graph>=0.3.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "setuptools>=80.9.0",
    "spacy[transformers]==3.8.7",
    "sphinx>=8.2.3",
    "sphinx-reload>=0.2.0",
    "sqlalchemy>=2.0.41",
    "weaviate-client>=4.16.3",
    "wheel>=0.45.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
